--- a/language/es.po
+++ b/language/es.po
@@ -5,9 +5,9 @@
 # 
 # Translators:
 # María Jesús Colmenero <mjcolmenero@gmail.com>, 2018
-# Darío Hereñú, 2019
 # Carlos Rivera <Robertohernande9z9@hotmail.com>, 2019
 # Alfonso Montejo <almontejor@gmail.com>, 2021
+# Darío Hereñú, 2022
 # 
 #, fuzzy
 msgid ""
@@ -16,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-02-17 13:26-0500\n"
 "PO-Revision-Date: 2017-09-14 20:14+0000\n"
-"Last-Translator: Alfonso Montejo <almontejor@gmail.com>, 2021\n"
+"Last-Translator: Darío Hereñú, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/omeka/teams/14184/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,7 +56,7 @@ msgstr ""
 
 #: view/common/options-sidebar.phtml:29
 msgid "Data type"
-msgstr ""
+msgstr "Tipo de datoz"
 
 #: view/common/options-sidebar.phtml:40
 msgid "Import values as private"
@@ -531,7 +531,7 @@ msgstr "Elementos para el conjunto de item"
 
 #: src/Form/MappingForm.php:261
 msgid "Sites for items"
-msgstr ""
+msgstr "Sitios para elementos"
 
 #: src/Form/MappingForm.php:271
 msgid "Multivalue separator"
